--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "name": "battleship",
   "version": "1.0.0",
-  "main": "class.js",
+  "main": "index.js",
   "dependencies": {
     "ansi-escapes": "^4.3.2",
     "ansi-regex": "^5.0.1",
